<resources>
    <string name="app_name">TETRIS</string>
    <string name="high_score_default">High score:</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">exit</string>
    <string name="high_score">High score</string>
    <string name="current_score">Current score</string>
    <string name="bth_restart">Restart</string>
</resources>